--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "zip": "gulp zip",
     "code": "editorconfig-checker"
   },
-  "author": "MaxGraph",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.7",
