--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "postcss": "^8.4.5",
     "postcss-scss": "^4.0.2",
     "sass": "^1.45.1",
-    "stylelint": "^14.2.0",
     "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.5.0",
     "typograf": "^6.14.1",
     "webpack": "^5.65.0",
     "webpack-stream": "^7.0.0"
@@ -64,6 +65,7 @@
     "rellax": "^1.12.1",
     "simplebar": "^5.3.6",
     "smooth-scroll": "^16.1.3",
+    "stylelint": "^14.16.1",
     "swiped-events": "^1.1.6",
     "swiper": "^7.4.1"
   }
