--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "gulp-builder for weblayout",
   "main": "gulpfile.js",
   "scripts": {
+    "deploy": "gulp build && gh-pages -d app",
     "html": "node-w3c-validator -f lint -evH -i app/**/*.html",
     "dev": "gulp",
     "build": "gulp build",
@@ -14,6 +15,7 @@
   },
   "author": "",
   "license": "ISC",
+  "homepage": "https://github.com/Artem-Kiselev34/travel-agency",
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
@@ -21,12 +23,14 @@
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "editorconfig-checker": "^4.0.1",
+    "gh-pages": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cheerio": "^1.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
